# Smart_file_organiser

./: README.md  __init__.py  config.py  duplicate_detector.py  file_renamer.py  gitignore  gui.py  main.py  organizer.py  pyproject.toml  setup.py  test_organizer.py  watcher.py
